@@ -1,5 +1,12 @@
 2004-06-22  Alan Modra  <amodra@bigpond.net.au>
 
+	* readelf.c (Elf32_Word): Delete.
+	(get_32bit_dynamic_section): Handle SGI ELF dynamic segment.
+	(get_64bit_dynamic_section): Likewise.
+
+	* readelf.c (get_32bit_dynamic_section): Stop at first DT_NULL entry.
+	(get_64bit_dynamic_section): Likewise.
+
 	* readelf.c (dynamic_nent): New variable.
 	(get_32bit_dynamic_section): Set it.
 	(get_64bit_dynamic_section): Here too.
